--- a/index.css
+++ b/index.css
@@ -32,6 +32,30 @@ footer, header, hgroup, menu, nav, section {
 
 * {
     color: black;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    max-width: 100%;
+    border: 1px solid gray;
+}
+html {
+    font-size: 62%;
+}
+body {
+    font-size: 1rem;
+    line-height: 1.5;
+}
+section {
+    padding: 4% 0;
+}
+h1, h2 {
+    margin: 2% 0;
+}
+h1 {
+    font-size: 4rem;
+}
+h2 {
+    font-size: 3.5rem;
 }
 
 nav a {
@@ -61,12 +85,12 @@ font-size: 19px;
 .text {
     text-align: center;
 }
-.topimg {
-    margin: 40px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 60%;
+.bg-img {
+    background-image:url(https://images.unsplash.com/photo-1653491889685-d68145b5abd1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw3fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=800&q=60);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 50vh;
 }
 
 .sidetext {
@@ -79,17 +103,44 @@ font-size: 19px;
     width: auto;
 }
 
-.bottomimg {
+.bottomrow {
     display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 20px;
     gap: 16px;
   }
 
 footer {
-    background-color: bisque;
-    background-position: center;
-    height: 30px;
-    background-size: cover;
     text-align: center;
     font-size: 30px;
-    margin: 30px;
+}
+
+@media(max-width: 800px){
+    .bottomrow {
+        flex-wrap: wrap;
+    }
+    .bottomrow img {
+        width: 20%;
+    }
+
+}
+
+@media(max-width: 500px){
+    .toptabs {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .toptabs button {
+        width: 40%;
+        margin: 1% 0;
+    }
+    .bottomrow {
+        flex-wrap: wrap;
+    }
+    .bottomrow img {
+        width: 40%;
+        margin: 4% 0;
+    }
 }
